@@ -255,6 +255,7 @@ AT_BANNER([Boost libraries])
 
 AT_CHECK_MACRO_CROSS([BOOST_FILESYSTEM])
 AT_CHECK_MACRO([BOOST_GRAPH])
+AT_CHECK_MACRO([BOOST_PROGRAM_OPTIONS])
 AT_CHECK_MACRO([BOOST_THREADS])
 
 AT_BANNER([Boost header-only libraries])
